third user story implementation